nivasa-macros/tests/trybuild/module_set_metadata_missing_key.rs
use nivasa_macros::{module, set_metadata};

#[module({})]
#[set_metadata(value = "billing")]
struct AppModule;

fn main() {}
